src/test/deca/syntax/valid/includeMathDecah.deca
// Description:
//    Programme minimaliste utilisant un include
//
// Resultats:
//
//
// Historique:
//    cree le 12/01/2024

{
    #include "includeLoop.decah"
    println("Elles sont très bonnes");
}
